--- a/Semprini.Mattia.5i.XMLReadWrite/Semprini.Mattia.5i.XMLReadWrite.csproj
+++ b/Semprini.Mattia.5i.XMLReadWrite/Semprini.Mattia.5i.XMLReadWrite.csproj
@@ -140,6 +140,7 @@
     <Content Include="ViewPage1.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\View2.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
